# snoo-abandoned-bt-cue-protocol

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
ci/: 0-bootstrap.sh  1-unittest.sh  2-doxygen.sh  3-metrics.sh  4-coverage.sh
include/: protocol.h  protocol_debug.h
src/: protocol.c
test/: protocol-debug_test.cpp  protocol_test.cpp
